--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,10 +1,17 @@
 #site-main {
     background-color: rgb(223, 232, 243);
 }
-h1 {
-    text-align: left;
-}
+.site-description {
+    margin-left: -80px;}
 
-h2 {
-    text-align: left
-}
+
+    .site-header-content {
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: start;
+        padding: 10vw 4vw;
+        min-height: 200px;
+        max-height: 450px;
+        /* text-align: center; */
+    }
