--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -13,3 +13,19 @@
   /* text-align: center; */
 
 }
+
+.post-full-content blockquote {
+  margin: 0 0 1.5em;
+  padding: 0 1.5em;
+  border-left: 3px solid #bbd2d6;
+}
+
+a {
+  background-color: transparent;
+  color: #535763;
+  text-decoration: none;
+}
+
+.post-full-meta-date {
+  color: #69708e;
+}
